# action-solver

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
action_solver/: __init__.py  action.py  builder.py  factory.py  solver.py  state.py
dataloader/: __init__.py  base.py  data_access.py  loader.py  presentation.py  registry.py  solver.py
tests/: test_sequential_solver.py
tests/examples/dataloader/: presentation.py  test_dataloader.py
typings/igraph/: __init__.pyi  adjacency.pyi  automorphisms.pyi  clustering.pyi  configuration.pyi  cut.pyi  datatypes.pyi  formula.pyi  layout.pyi  matching.pyi  seq.pyi  sparse_matrix.pyi  statistics.pyi  summary.pyi  utils.pyi  version.pyi
typings/igraph/app/: __init__.pyi
typings/igraph/drawing/: __init__.pyi  baseclasses.pyi  colors.pyi  graph.pyi  metamagic.pyi  shapes.pyi  text.pyi  utils.pyi
typings/igraph/drawing/cairo/: base.pyi  coord.pyi  dendrogram.pyi  edge.pyi  graph.pyi  histogram.pyi  matrix.pyi  palette.pyi  plot.pyi  polygon.pyi  text.pyi  utils.pyi  vertex.pyi
typings/igraph/drawing/matplotlib/: dendrogram.pyi  edge.pyi  graph.pyi  histogram.pyi  matrix.pyi  palette.pyi  polygon.pyi  utils.pyi  vertex.pyi
typings/igraph/drawing/plotly/: edge.pyi  graph.pyi  polygon.pyi  utils.pyi  vertex.pyi
typings/igraph/io/: __init__.pyi
typings/igraph/operators/: __init__.pyi  functions.pyi  methods.pyi
typings/igraph/remote/: __init__.pyi  gephi.pyi
