[project]
name = "action-solver"
version = "1.0.0"
description = "a library helping to structure complex code"
license = "MIT"

dependencies = [
  "igraph~=0.11",
  "cython~=3.1",
  "pydantic~=2.11",
]

[tools.setuptool]
packages = ["action_solver"]
authors = [
    {name = "puzzleYOU GmbH"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
